listado de doctores e inyecciÃon barra inferior

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -227,44 +227,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.10"
-        android:background="@drawable/navigation_bar_layout"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/navbar_firstButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_home" />
-
-        <ImageButton
-            android:id="@+id/navbar_secondButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_love" />
-
-        <ImageButton
-            android:id="@+id/navbar_thirdButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_book" />
-
-        <ImageButton
-            android:id="@+id/navbar_lastButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_messenger" />
+        <include layout="@layout/navigation_bar_inferior"/>
     </LinearLayout>
 
 </LinearLayout>
