--- a/app/src/main/res/layout/fragment_doctors.xml
+++ b/app/src/main/res/layout/fragment_doctors.xml
@@ -23,7 +23,7 @@
             android:paddingTop="20dp">
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/btn_regresar_DoctorsToHome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -48,12 +48,12 @@
             android:paddingBottom="10dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/contenedorBarraDeBusqueda"
+                android:id="@+id/contenedorBarraDeBusquedaDoctors"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/TextoBarraDeBusqueda"
+                    android:id="@+id/TextoBarraDeBusquedaDoctors"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/search_layout"
@@ -74,6 +74,7 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
+                    android:id="@+id/contenedor_Doctores_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -85,7 +86,7 @@
                         android:padding="10dp">
 
                         <ImageView
-                            android:id="@+id/imageView2"
+                            android:id="@+id/imagenDoctor"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left"
@@ -94,7 +95,20 @@
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_weight="1" />
+                            android:layout_weight="1">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/nombreDoctor"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="NombreDoctor" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
                 </LinearLayout>
@@ -109,7 +123,7 @@
         android:orientation="horizontal"
         >
 
-        <include layout="@layout/navbarinf" />
+        <include layout="@layout/navigation_bar_inferior" />
 
     </LinearLayout>
 </LinearLayout>
