--- a/app/src/main/res/layout/fragment_picker_reservation.xml
+++ b/app/src/main/res/layout/fragment_picker_reservation.xml
@@ -24,7 +24,7 @@
             android:paddingTop="20dp">
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/btn_regresar_pickerReservationToReservation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -56,7 +56,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -70,6 +69,7 @@
                 android:layout_marginTop="10dp">
 
                 <LinearLayout
+                    android:id="@+id/contenedorHoras"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -78,7 +78,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button11"
+                        android:id="@+id/hora1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -88,7 +88,6 @@
             </HorizontalScrollView>
 
             <TextView
-                android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -102,6 +101,7 @@
                 android:layout_marginTop="10dp">
 
                 <LinearLayout
+                    android:id="@+id/contenedorHorasRecordatorio"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -110,7 +110,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button12"
+                        android:id="@+id/horaRecordatorio1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
@@ -120,7 +120,7 @@
             </HorizontalScrollView>
 
             <Button
-                android:id="@+id/button10"
+                android:id="@+id/btn_confirmarReservation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
