--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -24,14 +24,13 @@
             android:paddingTop="20dp">
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/btn_regresar_ReservationToDoctors"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 app:srcCompat="?attr/homeAsUpIndicator" />
 
             <TextView
-                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="16dp"
                 android:layout_gravity="center_vertical"
@@ -49,7 +48,7 @@
             android:padding="10dp">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/fotoDoctorinReservation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
@@ -58,7 +57,20 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/nombreDoctorinReservation"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="TextView" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
@@ -74,7 +86,6 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -86,6 +97,7 @@
                     android:layout_marginBottom="10dp">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputNombrePaciente"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Nombre paciente" />
@@ -97,6 +109,7 @@
                     android:layout_marginBottom="10dp">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputNumeroContactoPaciente"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Número de contacto" />
@@ -120,7 +133,7 @@
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/button7"
+                            android:id="@+id/btn_nuevoPaciente"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -128,7 +141,7 @@
                             app:cornerRadius="8dp" />
 
                         <ImageView
-                            android:id="@+id/imageView3"
+                            android:id="@+id/imagenUsuarioPaciente"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -138,7 +151,7 @@
                 </HorizontalScrollView>
 
                 <Button
-                    android:id="@+id/button8"
+                    android:id="@+id/btn_siguiente_ReservationToPickerReservation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Siguiente" />
@@ -156,7 +169,7 @@
         android:orientation="horizontal"
         >
 
-        <include layout="@layout/navbarinf" />
+        <include layout="@layout/navigation_bar_inferior" />
 
     </LinearLayout>
 </LinearLayout>
