--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/home_scroll_background"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context="com.dapm.appbucal360.presentation.menu.citas_list.CitasFragment">
 
 
     <LinearLayout
@@ -118,7 +118,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"></LinearLayout>
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <ListView
+                android:id="@+id/listview_citas"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
